[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/MenuBar/MenuBar.gd" type="Script" id=1]

[node name="MenuBar" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 36.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 28.0

[node name="FileMenu" type="MenuButton" parent="HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false, "Preferences", null, 0, false, false, 4, 0, null, "", false, "Page Setup", null, 0, false, false, 5, 0, null, "", false, "Print", null, 0, false, false, 6, 0, null, "", false, "Quit", null, 0, false, false, 7, 0, null, "", false ]

[node name="EditMenu" type="MenuButton" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false, "Copy", null, 0, false, false, 1, 0, null, "", false, "Undo", null, 0, false, false, 2, 0, null, "", false, "Redo", null, 0, false, false, 3, 0, null, "", false ]

[node name="ToolsMenu" type="MenuButton" parent="HBoxContainer"]
margin_left = 79.0
margin_right = 125.0
margin_bottom = 20.0
focus_mode = 2
text = "Tools"
items = [ "Add State", null, 0, false, false, 0, 0, null, "", false, "Add Transition", null, 0, false, false, 1, 0, null, "", false, "Show Transition Anchors", null, 1, false, false, 2, 0, null, "", false, "Generate HDL", null, 0, false, false, 3, 0, null, "", false ]
